# scikit_build_example

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
